Fix table overflow on small screens

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -10,7 +10,6 @@
 }
 
 body {
-	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
@@ -35,10 +34,27 @@ body {
 	padding: 1rem;
 }
 
-* {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
-	font-size: 100%;
+}
+
+img,
+picture,
+svg,
+video {
+	display: block;
+	max-width: 100%;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+
 	border-color: var(--border-gray);
+
+	font-size: 100%;
 	font-family: "Segoe UI", "Roboto", -apple-system, BlinkMacSystemFont, "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
