--- a/web/src/pages/Room/views/voter/VoterView.module.scss
+++ b/web/src/pages/Room/views/voter/VoterView.module.scss
@@ -18,4 +18,8 @@ fieldset.voterChoices {
 
 p.infoText {
 	font-weight: 600;
+	margin-bottom: 1rem;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
